test/spec/multi-memory/store.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/proposals/multi-memory/store.wast
;;; ARGS*: --enable-multi-memory
(;; STDOUT ;;;
store1(i32:0, i64:1) =>
store2(i32:0, i64:2) =>
store(i32:0, i64:1) =>
store(i32:0, i64:2) =>
store1(i32:0, i64:1) =>
store2(i32:0, i64:2) =>
copy-1-to-2() =>
copy-2-to-1() =>
out/test/spec/multi-memory/store.wast:206: assert_malformed passed:
  out/test/spec/multi-memory/store/store.7.wat:1:30: error: unexpected token "i32.store32", expected an instr.
  (memory 1)(func (param i32) (i32.store32 (local.get 0) (i32.const 0)))
                               ^^^^^^^^^^^
out/test/spec/multi-memory/store.wast:213: assert_malformed passed:
  out/test/spec/multi-memory/store/store.8.wat:1:30: error: unexpected token "i32.store64", expected an instr.
  (memory 1)(func (param i32) (i32.store64 (local.get 0) (i64.const 0)))
                               ^^^^^^^^^^^
out/test/spec/multi-memory/store.wast:221: assert_malformed passed:
  out/test/spec/multi-memory/store/store.9.wat:1:30: error: unexpected token "i64.store64", expected an instr.
  (memory 1)(func (param i32) (i64.store64 (local.get 0) (i64.const 0)))
                               ^^^^^^^^^^^
out/test/spec/multi-memory/store.wast:229: assert_malformed passed:
  out/test/spec/multi-memory/store/store.10.wat:1:30: error: unexpected token "f32.store32", expected an instr.
  (memory 1)(func (param i32) (f32.store32 (local.get 0) (f32.const 0)))
                               ^^^^^^^^^^^
out/test/spec/multi-memory/store.wast:236: assert_malformed passed:
  out/test/spec/multi-memory/store/store.11.wat:1:30: error: unexpected token "f32.store64", expected an instr.
  (memory 1)(func (param i32) (f32.store64 (local.get 0) (f64.const 0)))
                               ^^^^^^^^^^^
out/test/spec/multi-memory/store.wast:244: assert_malformed passed:
  out/test/spec/multi-memory/store/store.12.wat:1:30: error: unexpected token "f64.store32", expected an instr.
  (memory 1)(func (param i32) (f64.store32 (local.get 0) (f32.const 0)))
                               ^^^^^^^^^^^
out/test/spec/multi-memory/store.wast:251: assert_malformed passed:
  out/test/spec/multi-memory/store/store.13.wat:1:30: error: unexpected token "f64.store64", expected an instr.
  (memory 1)(func (param i32) (f64.store64 (local.get 0) (f64.const 0)))
                               ^^^^^^^^^^^
out/test/spec/multi-memory/store.wast:260: assert_invalid passed:
  out/test/spec/multi-memory/store/store.14.wasm:0000026: error: type mismatch in implicit return, expected [i32] but got []
  0000026: error: EndFunctionBody callback failed
out/test/spec/multi-memory/store.wast:264: assert_invalid passed:
  out/test/spec/multi-memory/store/store.15.wasm:0000026: error: type mismatch in implicit return, expected [i64] but got []
  0000026: error: EndFunctionBody callback failed
out/test/spec/multi-memory/store.wast:268: assert_invalid passed:
  out/test/spec/multi-memory/store/store.16.wasm:0000029: error: type mismatch in implicit return, expected [f32] but got []
  0000029: error: EndFunctionBody callback failed
out/test/spec/multi-memory/store.wast:272: assert_invalid passed:
  out/test/spec/multi-memory/store/store.17.wasm:000002d: error: type mismatch in implicit return, expected [f64] but got []
  000002d: error: EndFunctionBody callback failed
out/test/spec/multi-memory/store.wast:276: assert_invalid passed:
  out/test/spec/multi-memory/store/store.18.wasm:0000026: error: type mismatch in implicit return, expected [i32] but got []
  0000026: error: EndFunctionBody callback failed
out/test/spec/multi-memory/store.wast:280: assert_invalid passed:
  out/test/spec/multi-memory/store/store.19.wasm:0000026: error: type mismatch in implicit return, expected [i32] but got []
  0000026: error: EndFunctionBody callback failed
out/test/spec/multi-memory/store.wast:284: assert_invalid passed:
  out/test/spec/multi-memory/store/store.20.wasm:0000026: error: type mismatch in implicit return, expected [i64] but got []
  0000026: error: EndFunctionBody callback failed
out/test/spec/multi-memory/store.wast:288: assert_invalid passed:
  out/test/spec/multi-memory/store/store.21.wasm:0000026: error: type mismatch in implicit return, expected [i64] but got []
  0000026: error: EndFunctionBody callback failed
out/test/spec/multi-memory/store.wast:292: assert_invalid passed:
  out/test/spec/multi-memory/store/store.22.wasm:0000026: error: type mismatch in implicit return, expected [i64] but got []
  0000026: error: EndFunctionBody callback failed
out/test/spec/multi-memory/store.wast:298: assert_invalid passed:
  out/test/spec/multi-memory/store/store.23.wasm:000001f: error: type mismatch in i32.store, expected [i32, i32] but got []
  000001f: error: OnStoreExpr callback failed
out/test/spec/multi-memory/store.wast:307: assert_invalid passed:
  out/test/spec/multi-memory/store/store.24.wasm:0000021: error: type mismatch in i32.store, expected [i32, i32] but got [i32]
  0000021: error: OnStoreExpr callback failed
out/test/spec/multi-memory/store.wast:316: assert_invalid passed:
  out/test/spec/multi-memory/store/store.25.wasm:0000025: error: type mismatch in i32.store, expected [i32, i32] but got []
  0000025: error: OnStoreExpr callback failed
out/test/spec/multi-memory/store.wast:326: assert_invalid passed:
  out/test/spec/multi-memory/store/store.26.wasm:0000025: error: type mismatch in i32.store, expected [i32, i32] but got [i32]
  0000025: error: OnStoreExpr callback failed
out/test/spec/multi-memory/store.wast:336: assert_invalid passed:
  out/test/spec/multi-memory/store/store.27.wasm:0000025: error: type mismatch in i32.store, expected [i32, i32] but got []
  0000025: error: OnStoreExpr callback failed
out/test/spec/multi-memory/store.wast:346: assert_invalid passed:
  out/test/spec/multi-memory/store/store.28.wasm:0000025: error: type mismatch in i32.store, expected [i32, i32] but got [i32]
  0000025: error: OnStoreExpr callback failed
out/test/spec/multi-memory/store.wast:356: assert_invalid passed:
  out/test/spec/multi-memory/store/store.29.wasm:0000025: error: type mismatch in i32.store, expected [i32, i32] but got []
  0000025: error: OnStoreExpr callback failed
out/test/spec/multi-memory/store.wast:366: assert_invalid passed:
  out/test/spec/multi-memory/store/store.30.wasm:0000025: error: type mismatch in i32.store, expected [i32, i32] but got [i32]
  0000025: error: OnStoreExpr callback failed
out/test/spec/multi-memory/store.wast:376: assert_invalid passed:
  out/test/spec/multi-memory/store/store.31.wasm:0000028: error: type mismatch in i32.store, expected [i32, i32] but got []
  0000028: error: OnStoreExpr callback failed
out/test/spec/multi-memory/store.wast:386: assert_invalid passed:
  out/test/spec/multi-memory/store/store.32.wasm:0000028: error: type mismatch in i32.store, expected [i32, i32] but got [i32]
  0000028: error: OnStoreExpr callback failed
out/test/spec/multi-memory/store.wast:396: assert_invalid passed:
  out/test/spec/multi-memory/store/store.33.wasm:0000025: error: type mismatch in i32.store, expected [i32, i32] but got []
  0000025: error: OnStoreExpr callback failed
out/test/spec/multi-memory/store.wast:406: assert_invalid passed:
  out/test/spec/multi-memory/store/store.34.wasm:0000025: error: type mismatch in i32.store, expected [i32, i32] but got [i32]
  0000025: error: OnStoreExpr callback failed
out/test/spec/multi-memory/store.wast:416: assert_invalid passed:
  out/test/spec/multi-memory/store/store.35.wasm:0000025: error: type mismatch in i32.store, expected [i32, i32] but got []
  0000025: error: OnStoreExpr callback failed
out/test/spec/multi-memory/store.wast:426: assert_invalid passed:
  out/test/spec/multi-memory/store/store.36.wasm:0000025: error: type mismatch in i32.store, expected [i32, i32] but got [i32]
  0000025: error: OnStoreExpr callback failed
out/test/spec/multi-memory/store.wast:436: assert_invalid passed:
  out/test/spec/multi-memory/store/store.37.wasm:0000025: error: type mismatch in i32.store, expected [i32, i32] but got []
  0000025: error: OnStoreExpr callback failed
out/test/spec/multi-memory/store.wast:446: assert_invalid passed:
  out/test/spec/multi-memory/store/store.38.wasm:0000025: error: type mismatch in i32.store, expected [i32, i32] but got [i32]
  0000025: error: OnStoreExpr callback failed
out/test/spec/multi-memory/store.wast:456: assert_invalid passed:
  out/test/spec/multi-memory/store/store.39.wasm:000001f: error: type mismatch in i32.store, expected [i32, i32] but got []
  000001f: error: OnStoreExpr callback failed
out/test/spec/multi-memory/store.wast:465: assert_invalid passed:
  out/test/spec/multi-memory/store/store.40.wasm:0000021: error: type mismatch in i32.store, expected [i32, i32] but got [i32]
  0000021: error: OnStoreExpr callback failed
out/test/spec/multi-memory/store.wast:474: assert_invalid passed:
  out/test/spec/multi-memory/store/store.41.wasm:000001f: error: type mismatch in i32.store, expected [i32, i32] but got []
  000001f: error: OnStoreExpr callback failed
out/test/spec/multi-memory/store.wast:483: assert_invalid passed:
  out/test/spec/multi-memory/store/store.42.wasm:0000021: error: type mismatch in i32.store, expected [i32, i32] but got [i32]
  0000021: error: OnStoreExpr callback failed
out/test/spec/multi-memory/store.wast:492: assert_invalid passed:
  out/test/spec/multi-memory/store/store.43.wasm:0000025: error: type mismatch in i32.store, expected [i32, i32] but got []
  0000025: error: OnStoreExpr callback failed
out/test/spec/multi-memory/store.wast:502: assert_invalid passed:
  out/test/spec/multi-memory/store/store.44.wasm:0000027: error: type mismatch in i32.store, expected [i32, i32] but got [i32]
  0000027: error: OnStoreExpr callback failed
out/test/spec/multi-memory/store.wast:512: assert_invalid passed:
  out/test/spec/multi-memory/store/store.45.wasm:000003c: error: type mismatch in i32.store, expected [i32, i32] but got []
  000003c: error: OnStoreExpr callback failed
out/test/spec/multi-memory/store.wast:528: assert_invalid passed:
  out/test/spec/multi-memory/store/store.46.wasm:000003e: error: type mismatch in i32.store, expected [i32, i32] but got [i32]
  000003e: error: OnStoreExpr callback failed
out/test/spec/multi-memory/store.wast:547: assert_invalid passed:
  out/test/spec/multi-memory/store/store.47.wasm:0000026: error: type mismatch in i32.store, expected [i32, i32] but got [f32, i32]
  0000026: error: OnStoreExpr callback failed
out/test/spec/multi-memory/store.wast:548: assert_invalid passed:
  out/test/spec/multi-memory/store/store.48.wasm:0000026: error: type mismatch in i32.store8, expected [i32, i32] but got [f32, i32]
  0000026: error: OnStoreExpr callback failed
out/test/spec/multi-memory/store.wast:549: assert_invalid passed:
  out/test/spec/multi-memory/store/store.49.wasm:0000026: error: type mismatch in i32.store16, expected [i32, i32] but got [f32, i32]
  0000026: error: OnStoreExpr callback failed
out/test/spec/multi-memory/store.wast:550: assert_invalid passed:
  out/test/spec/multi-memory/store/store.50.wasm:0000026: error: type mismatch in i64.store, expected [i32, i64] but got [f32, i32]
  0000026: error: OnStoreExpr callback failed
out/test/spec/multi-memory/store.wast:551: assert_invalid passed:
  out/test/spec/multi-memory/store/store.51.wasm:0000026: error: type mismatch in i64.store8, expected [i32, i64] but got [f32, i64]
  0000026: error: OnStoreExpr callback failed
out/test/spec/multi-memory/store.wast:552: assert_invalid passed:
  out/test/spec/multi-memory/store/store.52.wasm:0000026: error: type mismatch in i64.store16, expected [i32, i64] but got [f32, i64]
  0000026: error: OnStoreExpr callback failed
out/test/spec/multi-memory/store.wast:553: assert_invalid passed:
  out/test/spec/multi-memory/store/store.53.wasm:0000026: error: type mismatch in i64.store32, expected [i32, i64] but got [f32, i64]
  0000026: error: OnStoreExpr callback failed
out/test/spec/multi-memory/store.wast:554: assert_invalid passed:
  out/test/spec/multi-memory/store/store.54.wasm:0000029: error: type mismatch in f32.store, expected [i32, f32] but got [f32, f32]
  0000029: error: OnStoreExpr callback failed
out/test/spec/multi-memory/store.wast:555: assert_invalid passed:
  out/test/spec/multi-memory/store/store.55.wasm:000002d: error: type mismatch in f64.store, expected [i32, f64] but got [f32, f64]
  000002d: error: OnStoreExpr callback failed
out/test/spec/multi-memory/store.wast:557: assert_invalid passed:
  out/test/spec/multi-memory/store/store.56.wasm:0000026: error: type mismatch in i32.store, expected [i32, i32] but got [i32, f32]
  0000026: error: OnStoreExpr callback failed
out/test/spec/multi-memory/store.wast:558: assert_invalid passed:
  out/test/spec/multi-memory/store/store.57.wasm:0000026: error: type mismatch in i32.store8, expected [i32, i32] but got [i32, f32]
  0000026: error: OnStoreExpr callback failed
out/test/spec/multi-memory/store.wast:559: assert_invalid passed:
  out/test/spec/multi-memory/store/store.58.wasm:0000026: error: type mismatch in i32.store16, expected [i32, i32] but got [i32, f32]
  0000026: error: OnStoreExpr callback failed
out/test/spec/multi-memory/store.wast:560: assert_invalid passed:
  out/test/spec/multi-memory/store/store.59.wasm:0000026: error: type mismatch in i64.store, expected [i32, i64] but got [i32, f32]
  0000026: error: OnStoreExpr callback failed
out/test/spec/multi-memory/store.wast:561: assert_invalid passed:
  out/test/spec/multi-memory/store/store.60.wasm:000002a: error: type mismatch in i64.store8, expected [i32, i64] but got [i32, f64]
  000002a: error: OnStoreExpr callback failed
out/test/spec/multi-memory/store.wast:562: assert_invalid passed:
  out/test/spec/multi-memory/store/store.61.wasm:000002a: error: type mismatch in i64.store16, expected [i32, i64] but got [i32, f64]
  000002a: error: OnStoreExpr callback failed
out/test/spec/multi-memory/store.wast:563: assert_invalid passed:
  out/test/spec/multi-memory/store/store.62.wasm:000002a: error: type mismatch in i64.store32, expected [i32, i64] but got [i32, f64]
  000002a: error: OnStoreExpr callback failed
out/test/spec/multi-memory/store.wast:564: assert_invalid passed:
  out/test/spec/multi-memory/store/store.63.wasm:0000023: error: type mismatch in f32.store, expected [i32, f32] but got [i32, i32]
  0000023: error: OnStoreExpr callback failed
out/test/spec/multi-memory/store.wast:565: assert_invalid passed:
  out/test/spec/multi-memory/store/store.64.wasm:0000023: error: type mismatch in f64.store, expected [i32, f64] but got [i32, i64]
  0000023: error: OnStoreExpr callback failed
101/101 tests passed.
;;; STDOUT ;;)
